--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
         applicationId "com.ziwenwen.onekeychat"
         minSdkVersion 18
         targetSdkVersion 25
-        versionCode 1
+        versionCode 2
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -15,6 +15,20 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+    signingConfigs {
+        debug {
+            storeFile file("..\\keystore.jks")
+            storePassword "wziwen"
+            keyAlias "onekeychat"
+            keyPassword "wziwen"
+        }
+        debug {
+            storeFile file("..\\keystore.jks")
+            storePassword "wziwen"
+            keyAlias "onekeychat"
+            keyPassword "wziwen"
         }
     }
 }
