--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
-                <action android:name="android.intent.action.CREATE_SHORTCUT" />
+                <!--<action android:name="android.intent.action.CREATE_SHORTCUT" />-->
             </intent-filter>
         </activity>
 
