--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest package="com.ziwenwen.onekeychat"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
+    <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT"/>
 
     <application
         android:name=".App"
@@ -14,15 +14,16 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
-                <!--<action android:name="android.intent.action.CREATE_SHORTCUT" />-->
+                <!-- <action android:name="android.intent.action.CREATE_SHORTCUT" /> -->
             </intent-filter>
         </activity>
 
         <service
             android:name=".MyAccessibility"
-            android:process=":accessibility"
-            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE"
+            android:process=":accessibility">
             <intent-filter>
                 <action android:name="android.accessibilityservice.AccessibilityService"/>
             </intent-filter>
@@ -31,6 +32,18 @@
                 android:name="android.accessibilityservice"
                 android:resource="@xml/accessibility"/>
         </service>
+        <service android:name=".widget.GridWidgetService"
+                 android:permission="android.permission.BIND_REMOTEVIEWS"/>
+
+        <receiver android:name=".widget.OneAppWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/one_app_widget_info"/>
+        </receiver>
     </application>
 
 </manifest>
