--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,14 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".ListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
                 <!-- <action android:name="android.intent.action.CREATE_SHORTCUT" /> -->
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivity"/>
 
         <service
             android:name=".MyAccessibility"
