--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,8 @@
             android:screenOrientation="portrait" />
 
         <service
-            android:name=".MyAccessibility"
+            android:name=".WeixinCallAS"
+            android:process=":service"
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
             <intent-filter>
                 <action android:name="android.accessibilityservice.AccessibilityService"/>
