--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,24 +16,22 @@ android {
                 MTA_CHANNEL:"wen"
         ]
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+    signingConfigs {
+        myConfig {
+            storeFile file("..\\keystore.jks")
+            storePassword "wziwen"
+            keyAlias "onekeychat"
+            keyPassword "wziwen"
         }
     }
-    signingConfigs {
+    buildTypes {
         debug {
-            storeFile file("..\\keystore.jks")
-            storePassword "wziwen"
-            keyAlias "onekeychat"
-            keyPassword "wziwen"
+            signingConfig signingConfigs.myConfig
         }
-        debug {
-            storeFile file("..\\keystore.jks")
-            storePassword "wziwen"
-            keyAlias "onekeychat"
-            keyPassword "wziwen"
+        release {
+            signingConfig signingConfigs.myConfig
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
