--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,8 +48,9 @@ dependencies {
     def SUPPORT_LIB_VERSION = "26.1.0"
     compile "com.android.support:recyclerview-v7:$SUPPORT_LIB_VERSION"
     compile "com.android.support:exifinterface:$SUPPORT_LIB_VERSION"
+    // Bugly
     compile 'com.tencent.bugly:crashreport:2.6.6'
-    //mta 3.2 稳定版
+    // mta 3.2 稳定版 (腾讯统计)
     compile 'com.qq.mta:mta:3.3.1-release'
     compile 'com.tencent.mid:mid:3.73-release'
 }
