--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 29
 //    buildToolsVersion "26.1.0"
     defaultConfig {
         applicationId "com.ziwenwen.onekeychat"
         minSdkVersion 16
-        targetSdkVersion 26
+        targetSdkVersion 29
         versionCode 3
         versionName "1.1"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         manifestPlaceholders = [
                 MTA_APPKEY:"AY1T3HU3R4RM",
@@ -20,13 +20,13 @@ android {
         myConfig {
             storeFile file("..\\keystore.jks")
             storePassword "wziwen"
-            keyAlias "onekeychat"
+            keyAlias "locmsg"
             keyPassword "wziwen"
         }
     }
     buildTypes {
         debug {
-            signingConfig signingConfigs.myConfig
+//            signingConfig signingConfigs.myConfig
         }
         release {
             signingConfig signingConfigs.myConfig
@@ -37,20 +37,19 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile('com.github.bumptech.glide:glide:3.7.0', {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation ('com.github.bumptech.glide:glide:3.7.0', {
         exclude group: "com.android.support"
     })
-    compile('cn.finalteam.rxgalleryfinal:library:1.1.3', {
+    implementation('cn.finalteam.rxgalleryfinal:library:1.1.3', {
         exclude group: "com.android.support"
     })
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    def SUPPORT_LIB_VERSION = "26.1.0"
-    compile "com.android.support:recyclerview-v7:$SUPPORT_LIB_VERSION"
-    compile "com.android.support:exifinterface:$SUPPORT_LIB_VERSION"
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.exifinterface:exifinterface:1.1.0'
     // Bugly
-    compile 'com.tencent.bugly:crashreport:2.6.6'
+    implementation 'com.tencent.bugly:crashreport:2.6.6'
     // mta 3.2 稳定版 (腾讯统计)
-    compile 'com.qq.mta:mta:3.3.1-release'
-    compile 'com.tencent.mid:mid:3.73-release'
+    implementation 'com.qq.mta:mta:3.3.1-release'
+    implementation 'com.tencent.mid:mid:3.73-release'
 }
